--- a/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
@@ -9,3 +9,15 @@ portada:
 eventos:
     path: /eventos
     defaults: { _controller: CursoSymfonyEventosBundle:Evento:eventos }
+    
+evento:
+    path: /evento/{slug}
+    defaults: { _controller: CursoSymfonyEventosBundle:Evento:evento }  
+    
+disertantes:
+    path: /disertantes
+    defaults: { _controller: CursoSymfonyEventosBundle:Disertante:disertantes }
+    
+disertante:
+    path: /disertante/{id}
+    defaults: { _controller: CursoSymfonyEventosBundle:Disertante:disertante }
