Practico 9 - PC Living - Objeto Request en EventoController

--- a/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
@@ -12,7 +12,9 @@ eventos:
     
 evento:
     path: /evento/{slug}
-    defaults: { _controller: CursoSymfonyEventosBundle:Evento:evento }  
+    defaults: { _controller: CursoSymfonyEventosBundle:Evento:evento }
+    requirements:
+        _method: GET
     
 disertantes:
     path: /disertantes
