Practico 11 - Creaacion de Formulario de consulta sin entidad

--- a/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
@@ -23,3 +23,7 @@ disertantes:
 disertante:
     path: /disertante/{id}
     defaults: { _controller: CursoSymfonyEventosBundle:Disertante:disertante }
+    
+consulta:
+    path: /consulta
+    defaults: { _controller: CursoSymfonyEventosBundle:Default:consulta }
