Practico 11 - Registro Twig

--- a/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
@@ -27,3 +27,7 @@ disertante:
 consulta:
     path: /consulta
     defaults: { _controller: CursoSymfonyEventosBundle:Default:consulta }
+    
+registro:
+    path: /registro
+    defaults: { _controller: CursoSymfonyEventosBundle:Usuario:registro }    
