--- a/src/CursoSymfony/EventosBundle/Resources/config/routing-admin.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing-admin.yml
@@ -14,4 +14,7 @@ admin_evento_borrar:
     path: /evento/borrar/{id}
     defaults: { _controller: CursoSymfonyEventosBundle:AdminEvento:borrar }
 
+admin_evento_nuevo:
+    path: /evento/nuevo
+    defaults: { _controller: CursoSymfonyEventosBundle:AdminEvento:nuevo }
     
