--- a/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
+++ b/src/CursoSymfony/EventosBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
+inicio:
+    path: /inicio
+    defaults: { _controller: CursoSymfonyEventosBundle:Default:index }
 estatica:
     path: /sitio/{pagina}
     defaults: { _controller: CursoSymfonyEventosBundle:Default:estatica }
