--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,13 +2,20 @@
 # https://symfony.com/doc/current/service_container.html
 parameters:
     #parameter_name: value
+    #eventos.util.class: CursoSymfony\EventosBundle\Services\Util
+
 
 services:
     # default configuration for services in *this* file
-    eventos.helpers:
+    app.helpers:
         class: CursoSymfony\EventosBundle\Services\Helpers
         arguments: ["null"]
         public: true
+    
+    eventos.util:
+        class: CursoSymfony\EventosBundle\Services\Util
+        public: true
+    
 
     _defaults:
         # automatically injects dependencies in your services
