--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,7 +2,7 @@
 # https://symfony.com/doc/current/service_container.html
 parameters:
     #parameter_name: value
-    #eventos.util.class: CursoSymfony\EventosBundle\Services\Util
+    eventos.util.class: CursoSymfony\EventosBundle\Common\Util
 
 
 services:
@@ -13,9 +13,8 @@ services:
         public: true
     
     eventos.util:
-        class: CursoSymfony\EventosBundle\Services\Util
+        class: %eventos.util.class%
         public: true
-    
 
     _defaults:
         # automatically injects dependencies in your services
